--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,14 @@
 
 .App-link {
   color: #61dafb;
+
+}
+.height-100{
+  height: 100vh;
+}
+.App-Background{
+  background-image: linear-gradient(to right,#191654,#43C6AC);
+
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +43,23 @@
   to {
     transform: rotate(360deg);
   }
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
